--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  #flutter_local_notifications: ^5.0.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
